criar repo ecr para a api de videos

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,8 @@ jobs:
           -var="sqsVideoStatusQueueName=${{vars.VIDEOS_STATUS_SQS_NAME}}" \
           -var="rdsVideosDbName=${{vars.VIDEOS_DB_NAME}}" \
           -var="rdsDbVideosUserName=${{secrets.VIDEOS_DB_USERNAME}}" \
-          -var="rdsDbVideosPassword=${{secrets.VIDEOS_DB_PASSWORD}}" 
+          -var="rdsDbVideosPassword=${{secrets.VIDEOS_DB_PASSWORD}}" \
+          -var="ecrApiVideosName=${{vars.VIDEOS_API_ECR_NAME}}"
 
     # 7. Aplicar o plano do Terraform
     - name: Terraform Apply
