corrigir commit anterior

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Terraform Output DB Instance
       id: terraform-output
       run: |
-        DB_VIDEOS_INSTANCE=$(terraform output rds_videos_instance_address | grep -v "\[command\]" | awk '{print $1}' | tr -d '"\r\n')
+        DB_VIDEOS_INSTANCE=$(terraform output -json rds_videos_instance_address | jq -r '.value')
         if [ -z "$DB_VIDEOS_INSTANCE" ]; then
           echo "Error: Failed to get DB_VIDEOS_INSTANCE address from Terraform output."
           exit 1
