--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,10 +69,9 @@ jobs:
       id: terraform-output
       run: |
         unset TF_LOG  # or ensure debug logging is off
-        DB_VIDEOS_INSTANCE=$(terraform output -raw rds_videos_instance_address)
-        echo "DB_VIDEOS_INSTANCE<<EOF" >> $GITHUB_OUTPUT
-        echo "$DB_VIDEOS_INSTANCE" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        DB_VIDEOS_INSTANCE_JSON=$(terraform output -json rds_videos_instance_address)
+        DB_VIDEOS_INSTANCE=$(echo "$DB_VIDEOS_INSTANCE_JSON" | jq -r '.')
+        echo "DB_VIDEOS_INSTANCE=$DB_VIDEOS_INSTANCE" >> $GITHUB_OUTPUT
         
 
     # 8. Configurar o Kubectl
