--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,8 +69,7 @@ jobs:
       id: terraform-output
       run: |
         unset TF_LOG  # or ensure debug logging is off
-        DB_ADDRESS=$(terraform output -raw rds_videos_instance_address | cut -d':' -f1 | tr -d "'")
-        echo "DB_VIDEOS_INSTANCE=$DB_ADDRESS" >> $GITHUB_OUTPUT
+        echo "DB_VIDEOS_INSTANCE=$(terraform output -raw rds_videos_instance_address | cut -d':' -f1)\n" >> $GITHUB_OUTPUT
 
     # 8. Configurar o Kubectl
     - name: Install Kubectl
