--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,8 @@ jobs:
       id: terraform-output
       run: |
         unset TF_LOG  # or ensure debug logging is off
-        echo "::set-output name=DB_VIDEOS_INSTANCE::$(terraform output -raw rds_videos_instance_address | cut -d':' -f1)"
+        DB_ADDRESS=$(terraform output -raw rds_videos_instance_address | cut -d':' -f1)
+        echo "::set-output name=DB_VIDEOS_INSTANCE::$DB_ADDRESS"
 
     # 8. Configurar o Kubectl
     - name: Install Kubectl
