--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,8 @@ jobs:
           -var="rdsDbVideosUserName=${{secrets.VIDEOS_DB_USERNAME}}" \
           -var="rdsDbVideosPassword=${{secrets.VIDEOS_DB_PASSWORD}}" \
           -var="ecrApiVideosName=${{vars.VIDEOS_API_ECR_NAME}}" \
-          -var="ecrWorkerVideosStatusName=${{vars.VIDEOS_WORKER_STATUS_ECR_NAME}}"
+          -var="ecrWorkerVideosStatusName=${{vars.VIDEOS_WORKER_STATUS_ECR_NAME}}" \
+          -var="ecrWorkerVideosProcessName=${{vars.VIDEOS_WORKER_PROCESS_ECR_NAME}}" 
 
     # 7. Aplicar o plano do Terraform
     - name: Terraform Apply
