--- a/lambda_auth/package.json
+++ b/lambda_auth/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "aws-jwt-verify": "^5.0.0"
+  }
 }
